tests/snapshots/sizes__conn_pick_60x16.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
┌ editor (e to focus) ─────────────────────────────────────┐
│> SELECT id, email, plan, created_at                      │
│  FROM users                                              │
│  WHERE plan = 'pro'                                      │
│  ORDER BY created_at DESC;                               │
└──────────────────────────────────────────────────────────┘
┌ result · 6 row(s) ───────────────────────────────────────┐
│┌ pick a connection · 1/2 ───────────────────────────────┐│
││▶ [project]  prod     app@prod-db:5432/main  sslmode=d… ││
││  [IntelliJ] staging  app@staging-db:5432/main  sslmod… ││
││                                                        ││
││  nothing here connects until you press enter           ││
│└────────────────────────────────────────────────────────┘│
└──────────────────────────────────────────────────────────┘
 RO   TAP   N+1 ×1   ↑↓ / j/k navigate · F1 +3 more
